--- a/Page content word count.ipynb
+++ b/Page content word count.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "# from bs4 import BeautifulSoup as bs\n",
+    "from bs4 import BeautifulSoup as bs\n",
     "from urllib.request import urlopen\n",
     "import re\n",
     "\n",
